<resources>
    <string name="app_name">ProcureApp</string>
    <string name="signin">SIGN IN</string>
    <string name="signup">SIGN UP</string>
    <string name="slogan">Learnnnn</string>
    <string name="password">PASSWORD</string>
    <string name="Email">EMAIL</string>
    <string name="Login">LOGIN</string>
    <string name="retypepw">Re-Type Password</string>
    <string name="name">Name</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="logout">LOGOUT</string>
    <string name="title_activity_user_dashboard">UserDashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Profile</string>
    <string name="menu_gallery">Add Order</string>
    <string name="menu_slideshow">List Orders</string>
    <string name="add_order">Add Order</string>
    <string name="list_orders">List Orders</string>
    <string name="logout2">Logout</string>
    <string name="profile">Profile</string>
    <string name="Procurement_Manager">Procurement Manager</string>
    <string name="itemname">Item Name</string>
    <string name="deliveryaddress">Delivery Address</string>
    <string name="Quantity">Quantity</string>
    <string name="date">Date</string>
    <string name="addorder">Add Order</string>
    <string name="expecteddate">Expected Date</string>
    <string name="cancel">Cancel</string>
    <string name="delivered" >Delivered</string>
    <string name="delete">Delete</string>
</resources>