<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="100"
        android:orientation="vertical">

        <TextView
            android:id="@+id/itemview1"
            android:layout_width="272dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="9dp"
            android:text="Item"
            android:textColor="@color/black"
            android:textFontWeight="1000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/quantityview"
            android:layout_width="272dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:text="Quantity"
            android:textColor="@color/black"
            android:textFontWeight="1000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/statusview"
            android:layout_width="272dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:text="Status"
            android:textColor="@color/black"
            android:textFontWeight="1000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/deliveryview"
            android:layout_width="272dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:text="Delivery"
            android:textColor="@color/black"
            android:textFontWeight="1000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/expectedview"
            android:layout_width="272dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:text="Expected"
            android:textColor="@color/black"
            android:textFontWeight="1000"
            android:textSize="16sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="50"
        android:orientation="vertical">


        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="7dp"
            android:backgroundTint="@android:color/holo_orange_light"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/deliveredbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="7dp"

            android:text="@string/delivered" />

        <Button
            android:id="@+id/deletebtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="7dp"
            android:backgroundTint="@color/design_default_color_error"
            android:text="@string/delete" />

    </LinearLayout>


</LinearLayout>